# hearth

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  flake.nix  justfile
.cargo/: config.toml
.claude/agents/: compliance-auditor.md  hardening-reviewer.md  security-review.md  threat-model.md
.claude/commands/: compliance-audit.md  hardening-check.md  security-review.md  threat-model.md
.github/workflows/: ci.yml  helm.yml
chart/hearth-home/: Chart.yaml  ct.yaml  values-production.yaml  values.yaml
chart/hearth-home/ci/: ct-values.yaml
chart/hearth-home/templates/: NOTES.txt  _helpers.tpl
chart/hearth-home/tests/: api_configmap_test.yaml  api_deployment_test.yaml  api_ingress_test.yaml  api_misc_test.yaml  api_service_test.yaml  attic_test.yaml  build_worker_test.yaml  capabilities_test.yaml  headscale_test.yaml  kanidm_bootstrap_test.yaml  kanidm_test.yaml  nextcloud_test.yaml  oauth2_proxy_test.yaml  (+3 more)
cpp/hearth-office-bridge/: bridge.cxx  comments_panel.cxx  comments_panel.hxx  frame_url.cxx  frame_url.hxx  lock_status_controller.cxx  lock_status_controller.hxx  rust_ffi.hxx  share_handler.cxx  share_handler.hxx
crates/hearth-agent/: Cargo.toml
crates/hearth-agent/src/: actions.rs  config.rs  headscale.rs  installer.rs  ipc.rs  main.rs  metrics.rs  poller.rs  queue.rs  updater.rs
crates/hearth-api/: Cargo.toml
crates/hearth-api/src/: auth.rs  cache_token.rs  db.rs  deployment_fsm.rs  deployment_monitor.rs  error.rs  headscale.rs  health_check.rs  identity_sync.rs  lib.rs  main.rs  metrics.rs  repo.rs  rollout.rs
crates/hearth-api/src/routes/: actions.rs  audit.rs  auth_me.rs  build_jobs.rs  cache_token.rs  catalog.rs  compliance.rs  deployments.rs  directory.rs  enrollment.rs  environments.rs  fleet_config.rs  health.rs  heartbeat.rs  machines.rs  me_config.rs  mod.rs  reports.rs  requests.rs  role_closures.rs  services.rs  stats.rs  user_configs.rs  web.rs
crates/hearth-api/tests/api/: actions.rs  audit.rs  auth.rs  build_jobs.rs  build_pipeline.rs  catalog.rs  deployment_monitor.rs  deployments.rs  enrollment.rs  environments.rs  health.rs  heartbeat.rs  machines.rs  mod.rs  reports.rs  requests.rs
crates/hearth-api/tests/common/: mod.rs
crates/hearth-build-worker/: Cargo.toml
crates/hearth-build-worker/src/: main.rs
crates/hearth-common/: Cargo.toml
crates/hearth-common/src/: api_client.rs  api_types.rs  config.rs  ipc.rs  lib.rs  nix_store.rs
crates/hearth-enrollment/: Cargo.toml
crates/hearth-enrollment/src/: app.rs  hw.rs  main.rs  oauth.rs  ui.rs
crates/hearth-enrollment/src/screens/: enroll.rs  hardware.rs  login.rs  mod.rs  network.rs  provision.rs  status.rs  welcome.rs
crates/hearth-greeter/: Cargo.toml
crates/hearth-greeter/src/: agent_client.rs  greetd.rs  main.rs  nss.rs  ui.rs
crates/hearth-office/: Cargo.toml  build.rs
crates/hearth-office/src/: config.rs  lib.rs  util.rs
crates/hearth-office/src/nextcloud/: comments.rs  lock.rs  mod.rs  share.rs
crates/hearth-office/src/uno/: comments_panel.rs  lock_status.rs  mod.rs  share_handler.rs
data/: hearth.css
deploy/: promtail-config.yml
deploy/grafana/: fleet-overview.json
dev/: enrollment-vm.nix  fleet-vm.nix  run-enrollment.sh  run-vm.sh  seed-demo-data.sh  seed-demo-data.sql  setup.sh
dev/attic/: cache-public-key  server.toml
dev/caddy/: Caddyfile  bootstrap.sh
dev/headscale/: config.yaml
dev/kanidm/: bootstrap.sh  cert.pem  server.toml
dev/nextcloud/: bootstrap.sh  init-db.sh
dev/stalwart/: bootstrap.sh  config.toml  init-db.sh
dev/synapse/: bootstrap.sh  element-config.json  homeserver.yaml  init-db.sh
docs/: Building_an_Open-Source_Enterprise_NixOS_Desktop_Management_Platform__Architecture_and_Integration_Analysis.md  DEMO.md  DEPLOYMENT.md  Enterprise_Linux_Workstation_Management_with_NixOS__2025_Strategic_Analysis.md  KANIDM.md  compliance-controls.yaml  compliance-registry.md  control-plane-architecture.md  data-architecture-and-fleet-update-model.md  hearth-custom-components-architecture.md  pieces-to-fill-in.txt  threat-model.md
hardware/: dell-latitude.nix  framework-13.nix  thinkpad-t14s.nix
home-modules/: admin.nix  chat.nix  common.nix  default.nix  designer.nix  developer.nix  firefox.nix  gnome-online-accounts.nix  libreoffice.nix  nextcloud.nix  services.nix  thunderbird.nix
lib/: mk-enrollment-image.nix  mk-fleet-host.nix
lib/disko-configs/: luks-lvm.nix  standard.nix
migrations/: 001_machines.sql  002_user_environments.sql  003_deployments.sql  004_audit_events.sql  005_software_catalog.sql  006_deployment_machines.sql  007_role_closures.sql  008_identity.sql  009_build_jobs.sql  010_phase4_enterprise.sql  012_hardware_and_instance_data.sql  013_drop_role_closures.sql  014_compliance_engine.sql  015_headscale.sql  016_user_env_overrides.sql
modules/: agent.nix  chat.nix  desktop.nix  enrollment.nix  firefox.nix  greeter.nix  hardening.nix  headscale-client.nix  kanidm-client.nix  libreoffice.nix  logging.nix  metrics.nix  nextcloud.nix  pam.nix  secure-boot.nix  services.nix  thunderbird.nix  tpm-fde.nix
modules/compliance/: cis-1-1-1.nix  cis-3-4-1.nix  cis-4-2-1.nix  default.nix  stig-v-230223.nix  stig-v-230271.nix
modules/roles/: default.nix
nix/: hearth-office-bridge.nix  hearth-office-oxt.nix  kanidm-cli.nix  libreoffice-sdk.nix  libreoffice-uno-libs.nix
nix/libreoffice-hearth/: default.nix  deps.nix  help.nix  main.nix  translations.nix  version.nix
nix/oxt/: Addons.xcu  ProtocolHandler.xcu  description.xml  hearth-office.components
nix/rust-uno/: default.nix
overlays/: default.nix
tests/: agent-config-roundtrip.nix  agent-heartbeat.nix  agent-polling.nix  agent-system-switch.nix  desktop-baseline.nix  disko-provision.nix  full-enrollment.nix  full-login-flow.nix  headscale-mesh.nix  kanidm-auth.nix  libreoffice-extension.nix  offline-fallback.nix  user-login-flow.nix
tests/lib/: headscale-test.nix  kanidm-test.nix  mock-api.nix  mock-api.py
web/: package.json  pnpm-lock.yaml  tsconfig.base.json
web/scripts/: check-design-system.sh
(+170 files in other folders)
