[workspace]
resolver = "2"
members = [
    "crates/hearth-common",
    "crates/hearth-agent",
    "crates/hearth-greeter",
    "crates/hearth-enrollment",
    "crates/hearth-api",
    "crates/hearth-build-worker",
    "crates/hearth-office",
]

[workspace.metadata.crane]
name = "hearth"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hearth-os/hearth"

[workspace.dependencies]
# Shared
hearth-common = { path = "crates/hearth-common" }
hearth-api = { path = "crates/hearth-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP / API
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# JWT
jsonwebtoken = "9"
base64 = "0.22"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
prometheus-client = "0.23"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# OIDC
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
