[package]
name = "hearth-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hearth control plane API server: machine management, deployments, software catalog"

[dependencies]
hearth-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
axum.workspace = true
sqlx.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio-util.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
reqwest.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
