[package]
name = "hearth-build-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hearth build worker: polls PostgreSQL job queue, evaluates flakes, builds derivations, pushes to cache"

[dependencies]
hearth-common.workspace = true
hearth-api.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx.workspace = true
reqwest.workspace = true
