[package]
name = "hearth-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, IPC protocol, API client, and utilities for the Hearth platform"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
