[package]
name = "hearth-greeter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hearth GTK4 greetd greeter: branded login UI with user environment progress"

[dependencies]
hearth-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
